# PydanticAiConcept

./: .env.example  .gitignore  0-mcp-server-mysql-sse.py  0-mcp-server-sse.py  1-simple.py  1-simple2.py  1-terminal.py  2-tool.py  3-mcp-chart.py  3-mcp-mysql.py  4-mcp-chart.py  5-mcp-sse.py  6-mcp-sse-gui.py  7-hf.py  7-mcp-sse-win.py  8-mcp-use-agent.py  9-smolagent.py  his.db  his.py  pyproject.toml  seed.py  sys_prompt.txt
mcp-server/: cal-mcp.py  chart-mcp.py  data-ana.py  mysql-sse-update.py  mysql-sse.py  regress.py
test/: regress.py  regress2.py
