[project]
name = "pydanticaiconcept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[logfire]>=0.5.0",
    "pydantic-ai-slim[huggingface,openai]>=0.5.0",
    "pymysql>=1.1.1",
    "mcp[cli]>=1.12.3",
    "pyqt6>=6.9.1",
    "huggingface-hub>=0.34.3",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.20.0",
    "pillow>=8.0.0",
    "fastmcp>=2.11.3",
    "scikit-learn>=1.7.1",
    "mcp-use>=1.3.9",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
]
